# rent_api

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
src/: settings.py  stress_test.py
src/__main__/: __main__.py
src/apps/base_app/: app.py  controller.py  exceptions.py  routers.py
src/apps/middlewares/: __init__.py  auth.py
src/apps/security/: schema.py
src/apps/users/: controller.py  exceptions.py  router.py  service.py
src/apps/users/schemas/: __init__.py  pydantic_schemas.py
src/db/: dependecies.py  uow.py
src/db/models/: __init__.py  apartments.py  user.py  users.py
src/db/postgres/: base.py  dependecies.py  models.py
src/db/postgres/alembic/: env.py
src/db/postgres/alembic/versions/: 4ef758c8d23a_1st_migration.py  88f1ab9238c5_1st_migration.py  9a1673caa9f3_1st_migration.py  ac9db9acdd47_add_password_col.py  d9527464d570_add_apartmet_table.py  f1837cd5eedc_1st_migration.py
src/db/repo/: base_repo.py  users_repo.py
